--- a/with-express/views/index.hbs
+++ b/with-express/views/index.hbs
@@ -17,6 +17,7 @@
         <ul>
             <p>Temperature: {{weatherData.main.temp}} </p>
             <p>Humidity: {{weatherData.main.humidity}} </p>
+            <p>Pressure: {{weatherData.main.pressure}}hPa</p>
         </ul>
 
     </div>
